# enoch

./: .genesis-agent  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  genesis.toml  pyproject.toml
.agent/: lineage.yaml
.github/requirements/: test-build.txt
.github/workflows/: tests.yml
docs/: architecture.md  evolve-skill.md  profiles.md  providers.md  testing.md  workflow-reliability.md
docs/images/: ATTRIBUTION.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md
libraries/github/: pyproject.toml
libraries/github/skills/github/: SKILL.md  skill.yaml
libraries/github/src/our_ark_github/: __init__.py  workflow.py
libraries/github/tests/: test_github_provider.py
libraries/launchd/: pyproject.toml
libraries/launchd/src/our_ark_launchd/: __init__.py
libraries/launchd/tests/: test_launchd_provider.py
libraries/provider-kit/: pyproject.toml
libraries/provider-kit/src/our_ark_provider_kit/: __init__.py  agent_context.py  contracts.py
libraries/provider-kit/tests/: test_provider_kit.py
libraries/skill-catalog/: pyproject.toml
libraries/skill-catalog/src/our_ark_skill_catalog/: __init__.py  catalog.py
libraries/skill-catalog/tests/: test_skill_catalog.py
libraries/systemd/: pyproject.toml
libraries/systemd/src/our_ark_systemd/: __init__.py
libraries/systemd/tests/: test_systemd_provider.py
libraries/telegram/: pyproject.toml
libraries/telegram-vision/: pyproject.toml
libraries/telegram-vision/skills/telegram-vision/: skill.yaml
libraries/telegram-vision/src/our_ark_telegram_vision/: __init__.py  core.py
libraries/telegram-vision/tests/: test_telegram_vision.py
libraries/telegram/skills/telegram-talk/: SKILL.md  skill.yaml
libraries/telegram/src/our_ark_telegram/: __init__.py  core.py  integration.py
libraries/telegram/tests/: test_telegram.py
src/enoch/: __init__.py  __main__.py  agent.py  application.py  automatic_learning.py  backlog.py  brain.py  brainstorming.py  channel.py  cli.py  codex_sessions.py  command_surface.py  commands.py  config.py  cron.py  daemon.py  evolve.py  evolve_events.py  evolve_lifecycle.py  experience.py  formatting.py  git_tools.py  identity.py  identity.yaml  identity_context.py  immune.py  instance.py  last_codex_input.py  learn.py  logs.py  paths.py  prompt_append.py  runtime.py  runtime_dependencies.py  setup_tools.py  skills.py  state.py  task_config.py  task_events.py  task_failures.py  (+6 more)
src/enoch/app/: __init__.py  activity.py  core.py  execution_context.py  inbox.py  models.py  parsing.py  presentation.py  reporting.py  task_workflow.py
src/enoch/evolution/: __init__.py  core.py  curation.py  events.py  lifecycle.py
src/enoch/evolution/sources/: __init__.py  brainstorming.py  experience.py  feedback.py
src/enoch/github/: workflow.py
src/enoch/lineage/: config.py  core.py
src/enoch/memory/: config.py  paths.py  prompt.py  store.py
src/enoch/operations/: __init__.py  update_doctor.py  update_tools.py  updater.py
src/enoch/profiles/: __init__.py  contracts.py  registry.py
src/enoch/providers/: __init__.py  _runtime_result_compat.py  contracts.py  forge.py  registry.py  runtime.py  vcs.py
src/enoch/skills/: __init__.py
src/enoch/skills/code/: SKILL.md  skill.yaml
src/enoch/skills/evolve/: SKILL.md  skill.yaml
src/enoch/skills/github/: SKILL.md  skill.yaml
src/enoch/skills/inherit/: SKILL.md  skill.yaml
src/enoch/skills/learn/: SKILL.md  skill.yaml
src/enoch/skills/skill-library/: SKILL.md  skill.yaml
src/enoch/skills/skill-library/agents/: openai.yaml
src/enoch/skills/teach/: SKILL.md  skill.yaml
src/enoch/skills/telegram-talk/: SKILL.md  skill.yaml
src/enoch/skills/telegram-vision/: SKILL.md  skill.yaml
src/enoch/skills/telegram-vision/agents/: openai.yaml
src/enoch/skills/work/: SKILL.md  skill.yaml
src/enoch/tasks/: __init__.py  events.py  queue.py  worktree.py
src/enoch/telegram/: __init__.py  __main__.py  bot.py  client.py  lifecycle.py  vision.py
tests/: __init__.py  test_enoch_automatic_learning.py  test_enoch_backlog.py  test_enoch_brain.py  test_enoch_brainstorming.py  test_enoch_cli.py  test_enoch_command_registry.py  test_enoch_config.py  test_enoch_cron.py  test_enoch_daemon.py  test_enoch_e2e.py  test_enoch_evolve.py  test_enoch_evolve_curation.py  test_enoch_evolve_events.py  test_enoch_evolve_lifecycle.py  test_enoch_experience.py  test_enoch_feedback.py  test_enoch_github_titles.py  test_enoch_github_workflow.py  test_enoch_identity.py  test_enoch_immune.py  test_enoch_launchers.py  test_enoch_learn.py  test_enoch_lineage.py  test_enoch_logs.py  test_enoch_memory.py  test_enoch_portable_install.py  test_enoch_profiles.py  test_enoch_prompt_append.py  test_enoch_providers.py  test_enoch_reliability.py  test_enoch_runtime_dependencies.py  test_enoch_skills.py  test_enoch_task_failures.py  test_enoch_task_queue.py  test_enoch_task_worktree.py  test_enoch_telegram.py  test_enoch_telegram_vision.py  test_enoch_update_tools.py  test_enoch_updater.py  (+1 more)
