[project]
name = "enoch"
version = "0.1.0"
description = "Enoch is a Genesis-created local agent."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@dac38645237afb8f1992d210d2a25a84328c87ae#subdirectory=libraries/provider-kit",
  "our-ark-telegram @ git+https://github.com/our-ark/enoch.git@224c99a4e430022e194d49c855b14de778f1f26c#subdirectory=libraries/telegram",
  "our-ark-github @ git+https://github.com/our-ark/enoch.git@224c99a4e430022e194d49c855b14de778f1f26c#subdirectory=libraries/github",
  "our-ark-launchd @ git+https://github.com/our-ark/enoch.git@dac38645237afb8f1992d210d2a25a84328c87ae#subdirectory=libraries/launchd",
  "our-ark-systemd @ git+https://github.com/our-ark/enoch.git@dac38645237afb8f1992d210d2a25a84328c87ae#subdirectory=libraries/systemd",
  "our-ark-skill-catalog @ git+https://github.com/our-ark/enoch.git@946ff26f93bff3f6eefeb5deb81ca4db1127266f#subdirectory=libraries/skill-catalog",
  "our-ark-telegram-vision @ git+https://github.com/our-ark/enoch.git@6d894d9beb882af7e5f57900b2323361510262de#subdirectory=libraries/telegram-vision",
]

[project.scripts]
enoch = "enoch.cli:main"
enoch-agent = "enoch.application:main"
enoch-daemon = "enoch.daemon:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enoch = ["identity.yaml"]
