[project]
name = "enoch"
version = "0.1.0"
description = "Enoch is a Genesis-created local agent."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@d061b43439237b999fd9ba8c40c1996e3bb676fa#subdirectory=libraries/provider-kit",
  "our-ark-skill-catalog @ git+https://github.com/our-ark/enoch.git@946ff26f93bff3f6eefeb5deb81ca4db1127266f#subdirectory=libraries/skill-catalog",
]

[project.optional-dependencies]
reference = [
  "our-ark-telegram @ git+https://github.com/our-ark/enoch.git@7659a64b95afd6542af01b2c2a91dd2a341d44f2#subdirectory=libraries/telegram",
  "our-ark-github @ git+https://github.com/our-ark/enoch.git@7659a64b95afd6542af01b2c2a91dd2a341d44f2#subdirectory=libraries/github",
  "our-ark-launchd @ git+https://github.com/our-ark/enoch.git@7659a64b95afd6542af01b2c2a91dd2a341d44f2#subdirectory=libraries/launchd",
  "our-ark-systemd @ git+https://github.com/our-ark/enoch.git@7659a64b95afd6542af01b2c2a91dd2a341d44f2#subdirectory=libraries/systemd",
  "our-ark-telegram-vision @ git+https://github.com/our-ark/enoch.git@6d894d9beb882af7e5f57900b2323361510262de#subdirectory=libraries/telegram-vision",
]

[project.scripts]
enoch = "enoch.cli:main"
enoch-agent = "enoch.app.core:main"
enoch-daemon = "enoch.operations.daemon:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enoch = ["identity.yaml"]
"enoch.skills" = ["**/*.md", "**/*.yaml"]
