[project]
name = "our-ark-github"
version = "0.1.0"
description = "GitHub forge provider for Our Ark agents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@d061b43439237b999fd9ba8c40c1996e3bb676fa#subdirectory=libraries/provider-kit",
]

[project.entry-points."enoch.providers"]
"forge.github" = "our_ark_github:create_provider"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
