[project]
name = "our-ark-launchd"
version = "0.1.0"
description = "macOS launchd service provider for Our Ark agents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@ed2dda1f1042cf6f616b9dffeebdbd12f6f85d26#subdirectory=libraries/provider-kit",
]

[project.entry-points."enoch.providers"]
"service.launchd" = "our_ark_launchd:create_provider"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
