[project]
name = "our-ark-launchd"
version = "0.1.0"
description = "macOS launchd service provider for Our Ark agents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@6a1952a069be703ba0b55205857acd28db10345f#subdirectory=libraries/provider-kit",
]

[project.entry-points."our_ark.providers"]
"service.launchd" = "our_ark_launchd:create_provider"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
