[project]
name = "our-ark-systemd"
version = "0.1.0"
description = "Linux systemd user service provider for Our Ark agents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@d061b43439237b999fd9ba8c40c1996e3bb676fa#subdirectory=libraries/provider-kit",
]

[project.entry-points."enoch.providers"]
"service.systemd" = "our_ark_systemd:create_provider"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
