[project]
name = "our-ark-systemd"
version = "0.1.0"
description = "Linux systemd user service provider for Our Ark agents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "our-ark-provider-kit @ git+https://github.com/our-ark/enoch.git@6a1952a069be703ba0b55205857acd28db10345f#subdirectory=libraries/provider-kit",
]

[project.entry-points."our_ark.providers"]
"service.systemd" = "our_ark_systemd:create_provider"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
