[project]
name = "our-ark-telegram-vision"
version = "0.1.0"
description = "Agent-neutral Telegram image selection, validation, prompting, and temporary storage."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
